Added light-mode (BETA)
- Added light-mode
- Changed styles of project divs

--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
             <div class="line2"></div>
             <div class="line3"></div>
         </div>
+        <div class="theme">
+            <i class="fas fa-sun" id="theme-mode"></i>
+        </div>
     </nav>
 
 <div class="head-wrapper" id="top">
@@ -59,7 +62,6 @@
             <h2>My Portfolio</h2>
             <p>I built this website to showcase all my projects I have worked on / built. This website was built with <span>HTML</span>, <span>CSS</span> and <span>JavaScript</span>.</p>
         </div>
-        <a href="#" class="projects-btn">View</a>
     </div>
     <div class="projects-div">
         <div class="projects-img"><img src="Images/macros.png" alt="MC Macros" draggable="false"></div>
