Fixed navbar on mobile displays

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
     <title>Jordan Schulte</title>
+    <link rel="icon" href="Images/logo.jpg" id="icon">
     <link rel="stylesheet" href="CSS/style.css">
     <script src="https://kit.fontawesome.com/eded3175eb.js" crossorigin="anonymous"></script>
     <link
