Made website more responsive
Please contact me if the display on your device has issues. I will release a fix ASAP.

--- a/index.html
+++ b/index.html
@@ -7,18 +7,17 @@
     <title>Jordan Schulte</title>
     <link rel="icon" href="Images/logo.jpg" id="icon">
     <link rel="stylesheet" href="CSS/style.css">
+    <!--Scrips/Links-->
     <script src="https://kit.fontawesome.com/eded3175eb.js" crossorigin="anonymous"></script>
-    <link
-  rel="stylesheet"
-  href="https://cdn.jsdelivr.net/npm/simplebar@latest/dist/simplebar.css"
-/>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/simplebar@latest/dist/simplebar.css"/>
+    <!--Scrips/Links-->
+
     <!--Fonts-->
     <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Hind+Siliguri:wght@300&display=swap" rel="stylesheet">
     <!--Fonts-->
-    
 </head>
 <body>
 <div class="wrapper">
@@ -56,7 +55,7 @@
 </div>
 <div class="projects-wrapper">
     <h1 class="projects-title">Projects</h1>
-<div class="projects-row">
+<div class="projects-container">
     <div class="projects-div" id="projects">
         <div class="projects-img"><img src="Images/portfolio.png" alt="My Portfolio" draggable="false"></div>
         <div class="projects-text">
@@ -80,11 +79,9 @@
         </div>
         <a href="https://competentcreators.netlify.app/" target="_blank" class="projects-btn">View</a>
     </div>
-</div>
-<div class="projects-row">
     <div class="projects-div">
         <div class="projects-img"><img src="Images/iap.png" alt="In-App Free" draggable="false"></div>
-        <div class="projects-text">
+        <div data-simplebar class="projects-text">
             <h2>In-App Free</h2>
             <p>This website was my first real project, I was happy when I finished this because I thought it looked cool and was fully functional. <span>HTML</span>, <span>CSS</span> and <span>Bootstrap</span>.</p>
         </div>
@@ -106,8 +103,6 @@
         </div>
         <a href="https://rock-paper-scissors-jordan.netlify.app/" target="_blank" class="projects-btn">View</a>
     </div>
-</div>
-<div class="projects-row">
     <div class="projects-div">
         <div class="projects-img"><img src="Images/weather.png" alt="Weather App" draggable="false"></div>
         <div class="projects-text">
