--- a/index.html
+++ b/index.html
@@ -113,10 +113,12 @@
     </div>
 </div>
 </div>
+<a href="#top" class="btt" title="Back To Top"><i class="fas fa-angle-up"></i></a>
 <div class="foot-wrapper" id="socials">
     <h1>Thanks for visiting</h1>
-    <a href="https://twitter.com/JordanDevelops" target="_blank"><i class="fab fa-twitter"></i></a><a href="https://github.com/JordanDevelops" target="_blank"><i class="fab fa-github"></i></a>
-    <a href="#top" class="btt">Back To Top</a>
+    <a href="https://twitter.com/JordanDevelops" target="_blank"><i class="fab fa-twitter"></i></a>
+    <a href="https://github.com/JordanDevelops" target="_blank"><i class="fab fa-github"></i></a>
+    <a href="mailto:email.jordanschulte@gmail.com" target="_blank"><i class="fas fa-envelope"></i></a>
 </div>
 </div>
     <script src="JavaScript/script.js"></script>
