--- a/index.html
+++ b/index.html
@@ -39,8 +39,10 @@
             <i class="fas fa-sun" id="theme-mode"></i>
         </div>
     </nav>
-
 <div class="head-wrapper" id="top">
+    <noscript> 
+        <div id="noscript-warning">*THIS WEBSITE IS NOT FUNCTIONAL WITHOUT JAVASCRIPT PLEASE ENABLE JAVASCRIPT IN YOUR BROWSERS SETTINGS*</div>
+    </noscript>
     <h1 class="head-title">Hello, my name is <span>Jordan Schulte</span>!</h1>
     <p class="head-paragraph">I am aspiring to become a Front-end web developer. View my projects below or check me out on social media!</p>
     <a href="#projects" class="head-button">Projects</a>
