--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             <h2>Jordan</h2>
         </div>
         <ul class="nav-links">
+            <li><a href="contact.html">Contact</a></li>
             <li><a href="#skills">Skills</a></li>
             <li><a href="#projects">Projects</a></li>
             <li><a href="#socials">Socials</a></li>
