--- a/index.html
+++ b/index.html
@@ -59,59 +59,92 @@
     <h1 class="projects-title">Projects</h1>
 <div class="projects-container">
     <div class="projects-div" id="projects">
+        <a href="https://github.com/JordanDevelops/JordanDevelops.github.io" class="btn-view" target="_blank">
         <div class="projects-img"><img src="Images/portfolio.png" alt="My Portfolio" draggable="false"></div>
         <div class="projects-text">
             <h2>My Portfolio</h2>
-            <p>I built this website to showcase all my projects I have worked on / built. This website was built with <span>HTML</span>, <span>CSS</span> and <span>JavaScript</span>.</p>
+            <div class="projects-text-section" data-simplebar>
+                <p>I built this website to showcase all my projects I have worked on / built. This website was built with <span>HTML</span>, <span>CSS</span> and <span>JavaScript</span>.</p>
+            </div>
         </div>
+    </a>
     </div>
     <div class="projects-div">
+        <a href="https://mcmacros.netlify.app/" class="btn-view" target="_blank">
         <div class="projects-img"><img src="Images/macros.png" alt="MC Macros" draggable="false"></div>
-        <div data-simplebar class="projects-text">
+        <div class="projects-text">
             <h2>MC Macros</h2>
-            <p>I made this website to release my C++ programs I built. I was testing the waters with C++ and made a couple programs. This website was built with <span>HTML</span>, <span>CSS</span> and <span>JavaScript</span>.</p>
+            <div class="projects-text-section" data-simplebar>
+                <p>I made this website to release my C++ programs I built. I was testing the waters with C++ and made a couple programs. This website was built with <span>HTML</span>, <span>CSS</span> and <span>JavaScript</span>.</p>
+            </div>
         </div>
-        <a href="https://mcmacros.netlify.app/" target="_blank" class="projects-btn">View</a>
+    </a>
     </div>
     <div class="projects-div">
+        <a href="https://competentcreators.netlify.app/" class="btn-view" target="_blank">
         <div class="projects-img"><img src="Images/cc.png" alt="Competent Creators" draggable="false"></div>
         <div class="projects-text">
             <h2>Competent Creators</h2>
-            <p>I built this website for a friend who made pretty cool gfx so I made him a website. This website was built with <span>HTML</span>, <span>CSS</span> and <span>JavaScript</span>.</p>
+            <div class="projects-text-section" data-simplebar>
+                <p>I built this website for a friend who made pretty cool gfx so I made him a website. This website was built with <span>HTML</span>, <span>CSS</span> and <span>JavaScript</span>.</p>
+            </div>
         </div>
-        <a href="https://competentcreators.netlify.app/" target="_blank" class="projects-btn">View</a>
+    </a>
     </div>
     <div class="projects-div">
+        <a href="https://inappfree.netlify.app/" class="btn-view" target="_blank">
         <div class="projects-img"><img src="Images/iap.png" alt="In-App Free" draggable="false"></div>
-        <div data-simplebar class="projects-text">
+        <div class="projects-text">
             <h2>In-App Free</h2>
-            <p>This website was my first real project, I was happy when I finished this because I thought it looked cool and was fully functional. <span>HTML</span>, <span>CSS</span> and <span>Bootstrap</span>.</p>
+            <div class="projects-text-section" data-simplebar>
+                <p>This website was my first real project, I was happy when I finished this because I thought it looked cool and was fully functional. <span>HTML</span>, <span>CSS</span> and <span>Bootstrap</span>.</p>
+            </div>
         </div>
-        <a href="https://inappfree.netlify.app/" target="_blank" class="projects-btn">View</a>
+    </a>
     </div>
     <div class="projects-div">
+        <a href="https://radio2bz.com" class="btn-view" target="_blank">
         <div class="projects-img"><img src="Images/radio2bz.png" alt="Radio2BZ" draggable="false"></div>
-        <div data-simplebar class="projects-text">
+        <div class="projects-text">
             <h2>Radio2BZ</h2>
-            <p>I made this website for my grandfather. He started selling his items on ebay so I thought it would be a good idea to make him a website. Our website has gained much traction and it did pretty well, I am still constantly updating it everyday. <span>HTML</span>, <span>CSS</span> and <span>JavaScript</span>.</p>
+            <div class="projects-text-section" data-simplebar> 
+                <p>I made this website for my grandfather. He started selling his items on ebay so I thought it would be a good idea to make him a website. Our website has gained much traction and it did pretty well, I am still constantly updating it everyday. <span>HTML</span>, <span>CSS</span> and <span>JavaScript</span>.</p>
+            </div>
         </div>
-        <a href="https://radio2bz.com" target="_blank" class="projects-btn">View</a>
+        </a>
     </div>
     <div class="projects-div">
+        <a href="https://rock-paper-scissors-jordan.netlify.app/" class="btn-view" target="_blank">
         <div class="projects-img"><img src="Images/rps.png" alt="Rock, Paper, Scissors" draggable="false"></div>
         <div class="projects-text">
             <h2>Rock, Paper, Scissors</h2>
+            <div class="projects-text-section" data-simplebar>
             <p>Rock, Paper, Scissors made this game with vanilla JavaScript to tone my skills. <span>HTML</span>, <span>CSS</span> and <span>JavaScript</span>.</p>
         </div>
-        <a href="https://rock-paper-scissors-jordan.netlify.app/" target="_blank" class="projects-btn">View</a>
+        </div>
+        </a>
     </div>
     <div class="projects-div">
+        <a href="https://weather-app-jordan.netlify.app/" class="btn-view" target="_blank">
         <div class="projects-img"><img src="Images/weather.png" alt="Weather App" draggable="false"></div>
         <div class="projects-text">
             <h2>Weather App</h2>
-            <p>Made this website to practice my pulling information from API's. This uses the OpenWeather API. <span>HTML</span>, <span>CSS</span> and <span>JavaScript</span>.</p>
+            <div class="projects-text-section" data-simplebar>
+                <p>Made this website to practice my pulling information from API's. This uses the OpenWeather API. <span>HTML</span>, <span>CSS</span> and <span>JavaScript</span>.</p>
+            </div>
         </div>
-        <a href="https://weather-app-jordan.netlify.app/" target="_blank" class="projects-btn">View</a>
+        </a>
+    </div>
+    <div class="projects-div">
+        <a href="https://jordan-birthday-countdown.netlify.app/" class="btn-view" target="_blank">
+        <div class="projects-img"><img src="Images/countdown.png" alt="Weather App" draggable="false"></div>
+        <div class="projects-text">
+            <h2>Countdown Timer</h2>
+            <div class="projects-text-section" data-simplebar>
+                <p>Made this to practice my JavaScript skills and to test out the Date objects. <span>HTML</span>, <span>CSS</span> and <span>JavaScript</span>.</p>
+            </div>
+        </div>
+        </a>
     </div>
 </div>
 </div>
