--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </nav>
 <div class="head-wrapper" id="top">
     <noscript> 
-        <div id="noscript-warning">*THIS WEBSITE IS NOT FUNCTIONAL WITHOUT JAVASCRIPT PLEASE ENABLE JAVASCRIPT IN YOUR BROWSERS SETTINGS*</div>
+        <div id="noscript-warning">*This website does not function correctly without JavaScript, please enable JavaScript in your settings!*</div>
     </noscript>
     <h1 class="head-title">Hello, my name is <span>Jordan Schulte</span>!</h1>
     <p class="head-paragraph">I am aspiring to become a Front-end web developer. View my projects below or check me out on social media!</p>
@@ -156,7 +156,9 @@
     <a href="mailto:email.jordanschulte@gmail.com" target="_blank"><i class="fas fa-envelope"></i></a>
 </div>
 </div>
-    <script src="JavaScript/script.js"></script>
+    <script src="JavaScript/navbar.js"></script>
+    <script src="JavaScript/totop.js"></script>
+    <script src="JavaScript/lightmode.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/simplebar@latest/dist/simplebar.min.js"></script>
 </body>
 </html>
