--- a/index.html
+++ b/index.html
@@ -137,11 +137,22 @@
     </div>
     <div class="projects-div">
         <a href="https://jordan-birthday-countdown.netlify.app/" class="btn-view" target="_blank">
-        <div class="projects-img"><img src="Images/countdown.png" alt="Weather App" draggable="false"></div>
+        <div class="projects-img"><img src="Images/countdown.png" alt="Countdown Timer" draggable="false"></div>
         <div class="projects-text">
             <h2>Countdown Timer</h2>
             <div class="projects-text-section" data-simplebar>
                 <p>Made this to practice my JavaScript skills and to test out the Date objects. <span>HTML</span>, <span>CSS</span> and <span>JavaScript</span>.</p>
+            </div>
+        </div>
+        </a>
+    </div>
+    <div class="projects-div">
+        <a href="https://jordan-todo-list.netlify.app/" class="btn-view" target="_blank">
+        <div class="projects-img"><img src="Images/jdl.png" alt="Jordan's To-do List" draggable="false"></div>
+        <div class="projects-text">
+            <h2>To-do List</h2>
+            <div class="projects-text-section" data-simplebar>
+                <p>I made this website for my grocery shopping and to sharpen my JavaScript skills. <span>HTML</span>, <span>CSS</span> and <span>JavaScript</span>.</p>
             </div>
         </div>
         </a>
