--- a/index.html
+++ b/index.html
@@ -160,6 +160,12 @@
 </div>
 </div>
 <a href="#top" class="btt" title="Back To Top"><i class="fas fa-angle-up"></i></a>
+<div class="notification-light">
+    <p>Theme has been set to <span class="accent-color">Light</span> mode.</p>
+</div>
+<div class="notification-dark">
+    <p>Theme has been set to <span class="accent-color">Dark</span> mode.</p>
+</div>
 <div class="foot-wrapper" id="socials">
     <h1>Thanks for visiting</h1>
     <a href="https://twitter.com/JordanDevelops" target="_blank"><i class="fab fa-twitter"></i></a>
