--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
             <h2>Jordan</h2>
         </div>
         <ul class="nav-links">
-            <li><a href="#skills">Skills</a></li>
-            <li><a href="#projects">Projects</a></li>
-            <li><a href="#socials">Socials</a></li>
+            <li class="nav-items"><a href="#skills">Skills</a></li>
+            <li class="nav-items"><a href="#projects">Projects</a></li>
+            <li class="nav-items"><a href="#socials">Socials</a></li>
         </ul>
         <div class="burger">
             <div class="line1"></div>
@@ -44,10 +44,10 @@
         <div id="noscript-warning">*This website does not function correctly without JavaScript, please enable JavaScript in your settings!*</div>
     </noscript>
     <h1 class="head-title">Hello, my name is <span>Jordan Schulte</span>!</h1>
-    <p class="head-paragraph">I am aspiring to become a Front-end web developer. View my projects below or check me out on social media!</p>
+    <p class="head-paragraph" id="skills">I am aspiring to become a Front-end web developer. View my projects below or check me out on social media!</p>
     <a href="#projects" class="head-button">Projects</a>
 </div>
-<div class="skills-wrapper" id="skills">
+<div class="skills-wrapper" id="projects">
     <div class="skills-title">
         <h1>Technical Skills</h1>
     </div>
@@ -58,7 +58,7 @@
 <div class="projects-wrapper">
     <h1 class="projects-title">Projects</h1>
 <div class="projects-container">
-    <div class="projects-div" id="projects">
+    <div class="projects-div">
         <a href="https://github.com/JordanDevelops/JordanDevelops.github.io" class="btn-view" target="_blank">
         <div class="projects-img"><img src="Images/portfolio.png" alt="My Portfolio" draggable="false"></div>
         <div class="projects-text">
