--- a/index.html
+++ b/index.html
@@ -103,6 +103,17 @@
         </a>
     </div>
     <div class="projects-div">
+        <a href="https://tip-calculator-jordan.netlify.app/" class="btn-view" target="_blank">
+        <div class="projects-img"><img src="Images/tip.png" alt="Tip Calculator" draggable="false"></div>
+        <div class="projects-text">
+            <h2>Tip Calculator</h2>
+            <div class="projects-text-section" data-simplebar>
+                <p>Made this website to help me out at the dinner table. <span>HTML</span>, <span>CSS</span> and <span>JavaScript</span>.</p>
+            </div>
+        </div>
+        </a>
+    </div>
+    <div class="projects-div">
         <a href="https://jordan-birthday-countdown.netlify.app/" class="btn-view" target="_blank">
         <div class="projects-img"><img src="Images/countdown.png" alt="Countdown Timer" draggable="false"></div>
         <div class="projects-text">
