--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
     <a href="https://twitter.com/JordanDevelops" target="_blank"><i class="fab fa-twitter"></i></a>
     <a href="https://github.com/JordanDevelops" target="_blank"><i class="fab fa-github"></i></a>
     <a href="mailto:email.jordanschulte@gmail.com" target="_blank"><i class="fas fa-envelope"></i></a>
-    <p class="copyright">Copyright © 2021, Jordan</p>
+    <p class="copyright">Copyright © 2021, Jordan.</p>
 </div>
 </div>
     <script src="JavaScript/navbar.js"></script>
