--- a/index.html
+++ b/index.html
@@ -25,16 +25,23 @@
         <div class="logo">
             <h2>Jordan</h2>
         </div>
-        <ul class="nav-links">
-            <li class="nav-items"><a href="#skills">Skills</a></li>
-            <li class="nav-items"><a href="#projects">Projects</a></li>
-            <li class="nav-items"><a href="#socials">Socials</a></li>
-        </ul>
-        <div class="burger">
-            <div class="line1"></div>
-            <div class="line2"></div>
-            <div class="line3"></div>
-        </div>
+            <div class="nav-links">
+                <a href="#skills" class="nav-item">Skills</a>
+                <a href="#projects" class="nav-item">Projects</a>
+                <div class="navContent">
+                    <a href="#socials" class="dropbtn">Social Media</a>
+                    <div class="dropdown-content">
+                        <a href="https://twitter.com/JordanDevelops" target="_blank">Twitter</a>
+                        <a href="https://github.com/JordanDevelops" target="_blank">GitHub</a>
+                        <a href="mailto:email.jordanschulte@gmail.com">Email</a>
+                      </div>
+                </div>
+            </div>
+            <div class="burger">
+                <div class="line1"></div>
+                <div class="line2"></div>
+                <div class="line3"></div>
+            </div>
         <div class="theme">
             <i class="fas fa-sun" id="theme-mode"></i>
         </div>
@@ -49,16 +56,46 @@
 </div>
 <div class="skills-wrapper" id="projects">
     <div class="skills-title">
-        <h1>Technical Skills</h1>
+        <h1>My Skills</h1>
     </div>
     <div class="skills-set">
-        <i class="fab fa-html5" title="HTML"></i><i class="fab fa-css3-alt" title="CSS"></i><i class="fab fa-js" title="JavaScript"></i><i class="fab fa-github-square" title="Github"></i>
+        <div class="skill-wrap">
+            <div class="skill-icon"><i class="fas fa-mobile-alt"></i></div>
+            <div class="skill-title"><h2>Supported</h2></div>
+            <div class="skill-message">
+                <p>All my apps and websites are developed to look good on every device!</p>
+            </div>
+        </div>
+        <div class="skill-wrap">
+            <div class="skill-icon"><i class="far fa-gem"></i></div>
+            <div class="skill-title"><h2>Quality</h2></div>
+            <div class="skill-message">
+                <p>All my apps and websites are developed with care, passion and quality.</p>
+            </div>
+        </div>
+        <div class="skill-wrap">
+            <div class="skill-icon"><i class="far fa-user"></i></div>
+            <div class="skill-title"><h2>User Friendly</h2></div>
+            <div class="skill-message">
+                <p>All my apps and websites are developed to be user friendly, I make sure my websites look clean and are easy for users to navigate.</p>
+            </div>
+        </div>
+        <div class="skill-wrap">
+            <div class="skill-icon"><i class="far fa-file-code"></i></div>
+            <div class="skill-title"><h2>Skills</h2></div>
+            <div class="skill-message">
+                <p>My skills are HTML5, CSS3, JavaScript ES6 and GitHub.</p>
+            </div>
+        </div>
     </div>
 </div>
 <div class="projects-wrapper">
     <h1 class="projects-title">Projects</h1>
 <div class="projects-container">
     <div class="projects-div">
+        <div class="projects-tag">
+            <div class="webTag">Website</div>
+        </div>
         <a href="https://github.com/JordanDevelops/JordanDevelops.github.io" class="btn-view" target="_blank">
         <div class="projects-img"><img src="Images/portfolio.png" alt="My Portfolio" draggable="false"></div>
         <div class="projects-text">
@@ -70,6 +107,24 @@
     </a>
     </div>
     <div class="projects-div">
+        <div class="projects-tag">
+            <div class="newTag" title="5/23/2021">New</div>
+            <div class="appTag">App</div>
+        </div>
+        <a href="https://wwwnotes.netlify.app" class="btn-view" target="_blank">
+        <div class="projects-img"><img src="Images/wwwNotes.png" alt="Jordan's Note's App." draggable="false"></div>
+        <div class="projects-text">
+            <h2>Notes App</h2>
+            <div class="projects-text-section" data-simplebar>
+                <p>I made this project because I needed to store information for games and homework. <span>HTML</span>, <span>CSS</span> and <span>JavaScript</span>.</p>
+            </div>
+        </div>
+        </a>
+    </div>
+    <div class="projects-div">
+        <div class="projects-tag">
+            <div class="appTag">App</div>
+        </div>
         <a href="https://jordan-todo-list.netlify.app/" class="btn-view" target="_blank">
         <div class="projects-img"><img src="Images/jdl.png" alt="Jordan's To-do List" draggable="false"></div>
         <div class="projects-text">
@@ -81,6 +136,9 @@
         </a>
     </div>
     <div class="projects-div">
+        <div class="projects-tag">
+            <div class="appTag">App</div>
+        </div>
         <a href="https://weather-app-jordan.netlify.app/" class="btn-view" target="_blank">
         <div class="projects-img"><img src="Images/weather.png" alt="Weather App" draggable="false"></div>
         <div class="projects-text">
@@ -92,6 +150,9 @@
         </a>
     </div>
     <div class="projects-div">
+        <div class="projects-tag">
+            <div class="appTag">App</div>
+        </div>
         <a href="https://rock-paper-scissors-jordan.netlify.app/" class="btn-view" target="_blank">
         <div class="projects-img"><img src="Images/rps.png" alt="Rock, Paper, Scissors" draggable="false"></div>
         <div class="projects-text">
@@ -103,6 +164,9 @@
         </a>
     </div>
     <div class="projects-div">
+        <div class="projects-tag">
+            <div class="appTag">App</div>
+        </div>
         <a href="https://tip-calculator-jordan.netlify.app/" class="btn-view" target="_blank">
         <div class="projects-img"><img src="Images/tip.png" alt="Tip Calculator" draggable="false"></div>
         <div class="projects-text">
@@ -114,6 +178,9 @@
         </a>
     </div>
     <div class="projects-div">
+        <div class="projects-tag">
+            <div class="appTag">App</div>
+        </div>
         <a href="https://jordan-birthday-countdown.netlify.app/" class="btn-view" target="_blank">
         <div class="projects-img"><img src="Images/countdown.png" alt="Countdown Timer" draggable="false"></div>
         <div class="projects-text">
@@ -125,6 +192,9 @@
         </a>
     </div>
     <div class="projects-div">
+        <div class="projects-tag">
+            <div class="webTag">Website</div>
+        </div>
         <a href="https://radio2bz.com" class="btn-view" target="_blank">
         <div class="projects-img"><img src="Images/radio2bz.png" alt="Radio2BZ" draggable="false"></div>
         <div class="projects-text">
@@ -136,6 +206,9 @@
         </a>
     </div>
     <div class="projects-div">
+        <div class="projects-tag">
+            <div class="webTag">Website</div>
+        </div>
         <a href="https://competentcreators.netlify.app/" class="btn-view" target="_blank">
         <div class="projects-img"><img src="Images/cc.png" alt="Competent Creators" draggable="false"></div>
         <div class="projects-text">
@@ -147,6 +220,9 @@
     </a>
     </div>
     <div class="projects-div">
+        <div class="projects-tag">
+            <div class="webTag">Website</div>
+        </div>
         <a href="https://mcmacros.netlify.app/" class="btn-view" target="_blank">
         <div class="projects-img"><img src="Images/macros.png" alt="MC Macros" draggable="false"></div>
         <div class="projects-text">
@@ -158,6 +234,9 @@
     </a>
     </div>
     <div class="projects-div">
+        <div class="projects-tag">
+            <div class="webTag">Website</div>
+        </div>
         <a href="https://inappfree.netlify.app/" class="btn-view" target="_blank">
         <div class="projects-img"><img src="Images/iap.png" alt="In-App Free" draggable="false"></div>
         <div class="projects-text">
@@ -183,6 +262,7 @@
     <a href="https://github.com/JordanDevelops" target="_blank"><i class="fab fa-github"></i></a>
     <a href="mailto:email.jordanschulte@gmail.com" target="_blank"><i class="fas fa-envelope"></i></a>
     <p class="copyright">Copyright © 2021, Jordan.</p>
+    <p class="version"><a href="https://github.com/JordanDevelops/JordanDevelops.github.io/commits/main" target="_blank">version 2.0.0</a></p>
 </div>
 </div>
     <script src="JavaScript/navbar.js"></script>
