--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
                 <div class="navContent">
                     <a href="#socials" class="dropbtn">Social Media</a>
                     <div class="dropdown-content">
+                        <a href="https://www.youtube.com/channel/UClsk6xnSAOGTWeZ3zhNu2uQ" target="_blank">YouTube</a>
                         <a href="https://twitter.com/JordanDevelops" target="_blank">Twitter</a>
                         <a href="https://github.com/JordanDevelops" target="_blank">GitHub</a>
                         <a href="mailto:email.jordanschulte@gmail.com">Email</a>
@@ -258,11 +259,12 @@
 </div>
 <div class="foot-wrapper" id="socials">
     <h1>Thanks for visiting</h1>
+    <a href="https://www.youtube.com/channel/UClsk6xnSAOGTWeZ3zhNu2uQ" target="_blank"><i class="fab fa-youtube"></i></a>
     <a href="https://twitter.com/JordanDevelops" target="_blank"><i class="fab fa-twitter"></i></a>
     <a href="https://github.com/JordanDevelops" target="_blank"><i class="fab fa-github"></i></a>
     <a href="mailto:email.jordanschulte@gmail.com" target="_blank"><i class="fas fa-envelope"></i></a>
     <p class="copyright">Copyright © 2021, Jordan.</p>
-    <p class="version"><a href="https://github.com/JordanDevelops/JordanDevelops.github.io/commits/main" target="_blank">version 2.0.0</a></p>
+    <p class="version"><a href="https://github.com/JordanDevelops/JordanDevelops.github.io/commits/main" target="_blank">version 2.1.0</a></p>
 </div>
 </div>
     <script src="JavaScript/navbar.js"></script>
