--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <a href="#skills" class="nav-item">Skills</a>
                 <a href="#projects" class="nav-item">Projects</a>
                 <div class="navContent">
-                    <a href="#socials" class="dropbtn">Social Media</a>
+                    <a href="#socials" class="dropbtn nav-item">Social Media</a>
                     <div class="dropdown-content">
                         <a href="https://www.youtube.com/channel/UClsk6xnSAOGTWeZ3zhNu2uQ" target="_blank">YouTube</a>
                         <a href="https://twitter.com/JordanDevelops" target="_blank">Twitter</a>
@@ -264,7 +264,7 @@
     <a href="https://github.com/JordanDevelops" target="_blank"><i class="fab fa-github"></i></a>
     <a href="mailto:email.jordanschulte@gmail.com" target="_blank"><i class="fas fa-envelope"></i></a>
     <p class="copyright">Copyright © 2021, Jordan.</p>
-    <p class="version"><a href="https://github.com/JordanDevelops/JordanDevelops.github.io/commits/main" target="_blank">version 2.1.0</a></p>
+    <p class="version"><a href="https://github.com/JordanDevelops/JordanDevelops.github.io/commits/main" target="_blank">version 2.1.1</a></p>
 </div>
 </div>
     <script src="JavaScript/navbar.js"></script>
