--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
             </div>
         </div>
         </a>
-    </div>
+    </div>ss
     <div class="projects-div">
         <div class="projects-tag">
             <div class="appTag">App</div>
@@ -264,7 +264,7 @@
     <a href="https://github.com/JordanDevelops" target="_blank"><i class="fab fa-github"></i></a>
     <a href="mailto:email.jordanschulte@gmail.com" target="_blank"><i class="fas fa-envelope"></i></a>
     <p class="copyright">Copyright © 2021, Jordan.</p>
-    <p class="version"><a href="https://github.com/JordanDevelops/JordanDevelops.github.io/commits/main" target="_blank">version 2.1.1</a></p>
+    <p class="version"><a href="https://github.com/JordanDevelops/JordanDevelops.github.io/commits/main" target="_blank">version 2.2.0</a></p>
 </div>
 </div>
     <script src="JavaScript/navbar.js"></script>
