--- a/index.html
+++ b/index.html
@@ -109,6 +109,21 @@
     </div>
     <div class="projects-div">
         <div class="projects-tag">
+            <div class="newTag">New</div>
+            <div class="gameTag">Game</div>
+        </div>
+        <a href="https://number-guesser-jordan.netlify.app/" class="btn-view" target="_blank">
+        <div class="projects-img"><img src="Images/ngg.png" alt="Jordan's Number Guesser Game." draggable="false"></div>
+        <div class="projects-text">
+            <h2>Numger Guesser</h2>
+            <div class="projects-text-section" data-simplebar>
+                <p>This was a game I had done for boces, but I decided to upgrade it. <span>HTML</span>, <span>CSS</span> and <span>JavaScript</span>.</p>
+            </div>
+        </div>
+        </a>
+    </div>
+    <div class="projects-div">
+        <div class="projects-tag">
             <div class="appTag">App</div>
         </div>
         <a href="https://wwwnotes.netlify.app" class="btn-view" target="_blank">
@@ -151,7 +166,7 @@
     </div>
     <div class="projects-div">
         <div class="projects-tag">
-            <div class="appTag">App</div>
+            <div class="gameTag">Game</div>
         </div>
         <a href="https://rock-paper-scissors-jordan.netlify.app/" class="btn-view" target="_blank">
         <div class="projects-img"><img src="Images/rps.png" alt="Rock, Paper, Scissors" draggable="false"></div>
@@ -263,7 +278,7 @@
     <a href="https://github.com/JordanDevelops" target="_blank"><i class="fab fa-github"></i></a>
     <a href="mailto:email.jordanschulte@gmail.com" target="_blank"><i class="fas fa-envelope"></i></a>
     <p class="copyright">Copyright © 2021, Jordan.</p>
-    <p class="version"><a href="https://github.com/JordanDevelops/JordanDevelops.github.io/commits/main" target="_blank">version 2.2.1</a></p>
+    <p class="version"><a href="https://github.com/JordanDevelops/JordanDevelops.github.io/commits/main" target="_blank">version 2.3.0</a></p>
 </div>
 </div>
     <script src="JavaScript/navbar.js"></script>
