--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                         <a href="https://www.youtube.com/channel/UClsk6xnSAOGTWeZ3zhNu2uQ" target="_blank">YouTube</a>
                         <a href="https://twitter.com/JordanDevelops" target="_blank">Twitter</a>
                         <a href="https://github.com/JordanDevelops" target="_blank">GitHub</a>
+                        <a href="https://www.snapchat.com/add/phoaxy" target="_blank">SnapChat</a>
                         <a href="mailto:email.jordanschulte@gmail.com">Email</a>
                       </div>
                 </div>
@@ -109,7 +110,6 @@
     </div>
     <div class="projects-div">
         <div class="projects-tag">
-            <div class="newTag">New</div>
             <div class="gameTag">Game</div>
         </div>
         <a href="https://number-guesser-jordan.netlify.app/" class="btn-view" target="_blank">
@@ -149,7 +149,7 @@
             </div>
         </div>
         </a>
-    </div>ss
+    </div>
     <div class="projects-div">
         <div class="projects-tag">
             <div class="appTag">App</div>
@@ -276,6 +276,7 @@
     <a href="https://www.youtube.com/channel/UClsk6xnSAOGTWeZ3zhNu2uQ" target="_blank"><i class="fab fa-youtube"></i></a>
     <a href="https://twitter.com/JordanDevelops" target="_blank"><i class="fab fa-twitter"></i></a>
     <a href="https://github.com/JordanDevelops" target="_blank"><i class="fab fa-github"></i></a>
+    <a href="https://www.snapchat.com/add/phoaxy" target="_blank"><i class="fab fa-snapchat-ghost"></i></a>
     <a href="mailto:email.jordanschulte@gmail.com" target="_blank"><i class="fas fa-envelope"></i></a>
     <p class="copyright">Copyright © 2021, Jordan.</p>
     <p class="version"><a href="https://github.com/JordanDevelops/JordanDevelops.github.io/commits/main" target="_blank">version 2.3.0</a></p>
