--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
     <!--Fonts-->
 </head>
 <body>
-<div class="wrapper">
     <nav>
         <div class="logo">
             <h2>Jordan</h2>
@@ -48,6 +47,7 @@
             <i class="fas fa-sun" id="theme-mode"></i>
         </div>
     </nav>
+<div class="wrapper">
 <div class="head-wrapper" id="top">
     <noscript> 
         <div id="noscript-warning">*This website does not function correctly without JavaScript, please enable JavaScript in your settings!*</div>
@@ -115,7 +115,7 @@
         <a href="https://number-guesser-jordan.netlify.app/" class="btn-view" target="_blank">
         <div class="projects-img"><img src="Images/ngg.png" alt="Jordan's Number Guesser Game." draggable="false"></div>
         <div class="projects-text">
-            <h2>Numger Guesser</h2>
+            <h2>Number Guesser</h2>
             <div class="projects-text-section" data-simplebar>
                 <p>This was a game I had done for boces, but I decided to upgrade it. <span>HTML</span>, <span>CSS</span> and <span>JavaScript</span>.</p>
             </div>
@@ -279,7 +279,7 @@
     <a href="https://www.snapchat.com/add/phoaxy" target="_blank"><i class="fab fa-snapchat-ghost"></i></a>
     <a href="mailto:email.jordanschulte@gmail.com" target="_blank"><i class="fas fa-envelope"></i></a>
     <p class="copyright">Copyright © 2021, Jordan.</p>
-    <p class="version"><a href="https://github.com/JordanDevelops/JordanDevelops.github.io/commits/main" target="_blank">version 2.3.0</a></p>
+    <p class="version"><a href="https://github.com/JordanDevelops/JordanDevelops.github.io/commits/main" target="_blank">version 2.3.2</a></p>
 </div>
 </div>
     <script src="JavaScript/navbar.js"></script>
