--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <a href="#skills" class="nav-item">Skills</a>
                 <a href="#projects" class="nav-item">Projects</a>
                 <div class="navContent">
-                    <a href="#socials" class="dropbtn nav-item">Social Media</a>
+                    <a href="#socials" class="dropbtn nav-item">Social Media <i class="fas fa-chevron-down"></i></a>
                     <div class="dropdown-content">
                         <a href="https://www.youtube.com/channel/UClsk6xnSAOGTWeZ3zhNu2uQ" target="_blank">YouTube</a>
                         <a href="https://twitter.com/JordanDevelops" target="_blank">Twitter</a>
@@ -273,13 +273,15 @@
 </div>
 <div class="foot-wrapper" id="socials">
     <h1>Thanks for visiting</h1>
-    <a href="https://www.youtube.com/channel/UClsk6xnSAOGTWeZ3zhNu2uQ" target="_blank"><i class="fab fa-youtube"></i></a>
-    <a href="https://twitter.com/JordanDevelops" target="_blank"><i class="fab fa-twitter"></i></a>
-    <a href="https://github.com/JordanDevelops" target="_blank"><i class="fab fa-github"></i></a>
-    <a href="https://www.snapchat.com/add/phoaxy" target="_blank"><i class="fab fa-snapchat-ghost"></i></a>
-    <a href="mailto:email.jordanschulte@gmail.com" target="_blank"><i class="fas fa-envelope"></i></a>
+        <div class="media-a">
+            <a href="https://www.youtube.com/channel/UClsk6xnSAOGTWeZ3zhNu2uQ" target="_blank"><i class="fab fa-youtube"></i></a>
+            <a href="https://twitter.com/JordanDevelops" target="_blank"><i class="fab fa-twitter"></i></a>
+            <a href="https://github.com/JordanDevelops" target="_blank"><i class="fab fa-github"></i></a>
+            <a href="https://www.snapchat.com/add/phoaxy" target="_blank"><i class="fab fa-snapchat-ghost"></i></a>
+            <a href="mailto:email.jordanschulte@gmail.com" target="_blank"><i class="fas fa-envelope"></i></a>
+        </div>
     <p class="copyright">Copyright © 2021, Jordan.</p>
-    <p class="version"><a href="https://github.com/JordanDevelops/JordanDevelops.github.io/commits/main" target="_blank">version 2.3.2</a></p>
+    <p class="version"><a href="https://github.com/JordanDevelops/JordanDevelops.github.io/commits/main" target="_blank">version 2.4.0</a></p>
 </div>
 </div>
     <script src="JavaScript/navbar.js"></script>
