--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <p class="head-paragraph" id="skills">I am aspiring to become a Front-end web developer. View my projects below or check me out on social media!</p>
     <a href="#projects" class="head-button">Projects</a>
 </div>
-<div class="skills-wrapper" id="projects">
+<div class="skills-wrapper">
     <div class="skills-title">
         <h1>My Skills</h1>
     </div>
@@ -91,7 +91,7 @@
         </div>
     </div>
 </div>
-<div class="projects-wrapper">
+<div class="projects-wrapper" id="projects">
     <h1 class="projects-title">Projects</h1>
 <div class="projects-container">
     <div class="projects-div">
@@ -281,7 +281,7 @@
             <a href="mailto:email.jordanschulte@gmail.com" target="_blank"><i class="fas fa-envelope"></i></a>
         </div>
     <p class="copyright">Copyright © 2021, Jordan.</p>
-    <p class="version"><a href="https://github.com/JordanDevelops/JordanDevelops.github.io/commits/main" target="_blank">version 2.4.0</a></p>
+    <p class="version"><a href="https://github.com/JordanDevelops/JordanDevelops.github.io/commits/main" target="_blank">version 2.4.1</a></p>
 </div>
 </div>
     <script src="JavaScript/navbar.js"></script>
