--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <div class="line2"></div>
                 <div class="line3"></div>
             </div>
-        <div class="theme">
+        <div class="theme" data-tooltip="Toggle Theme">
             <i class="fas fa-sun" id="theme-mode"></i>
         </div>
     </nav>
@@ -264,7 +264,7 @@
     </div>
 </div>
 </div>
-<a href="#top" class="btt" title="Back To Top"><i class="fas fa-angle-up"></i></a>
+<a href="#top" class="btt" title="Back To Top" data-tooltip="Back to Top"><i class="fas fa-angle-up"></i></a>
 <div class="notification-light">
     <p>Theme has been set to <span class="accent-color">Light</span> mode.</p>
 </div>
@@ -274,14 +274,14 @@
 <div class="foot-wrapper" id="socials">
     <h1>Thanks for visiting</h1>
         <div class="media-a">
-            <a href="https://www.youtube.com/channel/UClsk6xnSAOGTWeZ3zhNu2uQ" target="_blank"><i class="fab fa-youtube"></i></a>
-            <a href="https://twitter.com/JordanDevelops" target="_blank"><i class="fab fa-twitter"></i></a>
-            <a href="https://github.com/JordanDevelops" target="_blank"><i class="fab fa-github"></i></a>
-            <a href="https://www.snapchat.com/add/phoaxy" target="_blank"><i class="fab fa-snapchat-ghost"></i></a>
-            <a href="mailto:email.jordanschulte@gmail.com" target="_blank"><i class="fas fa-envelope"></i></a>
+            <a href="https://www.youtube.com/channel/UClsk6xnSAOGTWeZ3zhNu2uQ" target="_blank" data-tooltip="YouTube"><i class="fab fa-youtube"></i></a>
+            <a href="https://twitter.com/JordanDevelops" target="_blank" data-tooltip="Twitter"><i class="fab fa-twitter"></i></a>
+            <a href="https://github.com/JordanDevelops" target="_blank" data-tooltip="GitHub"><i class="fab fa-github"></i></a>
+            <a href="https://www.snapchat.com/add/phoaxy" target="_blank" data-tooltip="Snapchat"><i class="fab fa-snapchat-ghost"></i></a>
+            <a href="mailto:email.jordanschulte@gmail.com" target="_blank" data-tooltip="Email Me"><i class="fas fa-envelope"></i></a>
         </div>
     <p class="copyright">Copyright © 2021, Jordan.</p>
-    <p class="version"><a href="https://github.com/JordanDevelops/JordanDevelops.github.io/commits/main" target="_blank">version 2.4.1</a></p>
+    <p class="version"><a href="https://github.com/JordanDevelops/JordanDevelops.github.io/commits/main" target="_blank">version 2.5</a></p>
 </div>
 </div>
     <script src="JavaScript/navbar.js"></script>
