--- a/index.html
+++ b/index.html
@@ -1,292 +1,111 @@
-<!--Jordan Schulte-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-    <title>Jordan Schulte</title>
-    <link rel="icon" href="Images/logo.jpg" id="icon">
-    <link rel="stylesheet" href="CSS/style.css">
-    <!--Scrips/Links-->
+    <title>Jordan | My Work</title>
+    <!--Style Sheet-->
+    <link rel="stylesheet" href="src/SCSS/style.css">
+    <link rel="stylesheet" href="src/SCSS/navbar.css">
+    <link rel="stylesheet" href="src/SCSS/footer.css">
+    <!--Style Sheet-->
+    <!--FONTS-->
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Tinos&display=swap" rel="stylesheet">
+    <!--FONTS-->
+    <!--Font Awesome-->
     <script src="https://kit.fontawesome.com/eded3175eb.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/simplebar@latest/dist/simplebar.css"/>
-    <!--Scrips/Links-->
-
-    <!--Fonts-->
-    <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Hind+Siliguri:wght@300&display=swap" rel="stylesheet">
-    <!--Fonts-->
+    <!--Font Awesome-->
 </head>
 <body>
     <nav>
-        <div class="logo">
-            <h2>Jordan</h2>
+        <div class="main-title">
+            <h1>Jordan</h1>
         </div>
-            <div class="nav-links">
-                <a href="#skills" class="nav-item">Skills</a>
-                <a href="#projects" class="nav-item">Projects</a>
-                <div class="navContent">
-                    <a href="#socials" class="dropbtn nav-item">Social Media <i class="fas fa-chevron-down"></i></a>
-                    <div class="dropdown-content">
-                        <a href="https://www.youtube.com/channel/UClsk6xnSAOGTWeZ3zhNu2uQ" target="_blank">YouTube</a>
-                        <a href="https://twitter.com/JordanDevelops" target="_blank">Twitter</a>
-                        <a href="https://github.com/JordanDevelops" target="_blank">GitHub</a>
-                        <a href="https://www.snapchat.com/add/phoaxy" target="_blank">SnapChat</a>
-                        <a href="mailto:email.jordanschulte@gmail.com">Email</a>
-                      </div>
-                </div>
-            </div>
-            <div class="burger">
-                <div class="line1"></div>
-                <div class="line2"></div>
-                <div class="line3"></div>
-            </div>
-        <div class="theme" data-tooltip="Toggle Theme">
-            <i class="fas fa-sun" id="theme-mode"></i>
+        <div class="burger">
+            <i class="fas fa-grip-lines"></i>
+        </div>
+        <div class="main-links">
+            <a href="#" class="main-link selected">My Work</a>
+            <a href="about.html" class="main-link">About Me</a>
         </div>
     </nav>
-<div class="wrapper">
-<div class="head-wrapper" id="top">
-    <noscript> 
-        <div id="noscript-warning">*This website does not function correctly without JavaScript, please enable JavaScript in your settings!*</div>
-    </noscript>
-    <h1 class="head-title">Hello, my name is <span>Jordan Schulte</span>!</h1>
-    <p class="head-paragraph" id="skills">I am aspiring to become a Front-end web developer. View my projects below or check me out on social media!</p>
-    <a href="#projects" class="head-button">Projects</a>
-</div>
-<div class="skills-wrapper">
-    <div class="skills-title">
-        <h1>My Skills</h1>
-    </div>
-    <div class="skills-set">
-        <div class="skill-wrap">
-            <div class="skill-icon"><i class="fas fa-mobile-alt"></i></div>
-            <div class="skill-title"><h2>Supported</h2></div>
-            <div class="skill-message">
-                <p>All my apps and websites are developed to look good on every device!</p>
+    <main>
+        <div class="overlay"></div>
+        <!--1-->
+        <div class="work">
+            <div class="work-item"><a href="https://competentcreators.netlify.app" target="_blank">
+                <div class="work-img" data-tooltip="Competent Creators">
+                    <img src="Images/cc.png" alt="Competent Creators website image">
+                </div>
+                <div class="work-overlay">
+                    <p>Competent Creators</p>
+                </div>
+            </a></div>
+            <!--1-->
+            <div class="work-item">
+                <a href="https://rock-paper-scissors-jordan.netlify.app/" target="_blank">
+                <div class="work-img" data-tooltip="Rock, Paper, Scissors">
+                    <img src="Images/rps.png" alt="Rock Paper Scissors Website Image">
+                </div>
+            </a></div>
+            <!--1-->
+            <div class="work-item">
+                <a href="https://number-guesser-jordan.netlify.app/" target="_blank"><div class="work-img" data-tooltip="Number Guessing Game">
+                    <img src="Images/ngg.png" alt="Number Guessing Game Website Image">
+                </div></a>
             </div>
-        </div>
-        <div class="skill-wrap">
-            <div class="skill-icon"><i class="far fa-gem"></i></div>
-            <div class="skill-title"><h2>Quality</h2></div>
-            <div class="skill-message">
-                <p>All my apps and websites are developed with care, passion and quality.</p>
+            <!--1-->
+            <div class="work-item">
+                <a href="https://tip-calculator-jordan.netlify.app/" target="_blank"><div class="work-img" data-tooltip="Tip Calculator">
+                    <img src="Images/tip.png" alt="Tip Calculator Website Image">
+                </div></a>
             </div>
-        </div>
-        <div class="skill-wrap">
-            <div class="skill-icon"><i class="far fa-user"></i></div>
-            <div class="skill-title"><h2>User Friendly</h2></div>
-            <div class="skill-message">
-                <p>All my apps and websites are developed to be user friendly, I make sure my websites look clean and are easy for users to navigate.</p>
+            <!--1-->
+            <div class="work-item">
+                <a href="https://weather-app-jordan.netlify.app/" target="_blank"><div class="work-img" data-tooltip="Weather App">
+                    <img src="Images/weather.png" alt="Weather App Website Image">
+                </div></a>
+            </div>  
+            <!--1-->
+            <div class="work-item">
+                <a href="https://jordan-birthday-countdown.netlify.app/" target="_blank"><div class="work-img" data-tooltip="Countdown Timer">
+                    <img src="Images/countdown.png" alt="Countdown Website Image">
+                </div></a>
             </div>
+            <!--1-->
+            <div class="work-item">
+                <a href="https://wwwnotes.netlify.app/" target="_blank"><div class="work-img" data-tooltip="Notes App">
+                    <img src="Images/notes.png" alt="Notes Website Image">
+                </div></a>
+            </div>  
+            <!--1-->
+            <div class="work-item">
+                <a href="https://jordan-todo-list.netlify.app/" target="_blank"><div class="work-img" data-tooltip="To-do List">
+                    <img src="Images/todo.png" alt="To-do List Website Image">
+                </div></a>
+            </div>  
+            <!--1-->
+            <div class="work-item">
+                <a href="https://mcmacros.netlify.app/" target="_blank"><div class="work-img" data-tooltip="MC Macros">
+                    <img src="Images/mc.png" alt="Minecraft Macros Website Image">
+                </div></a>
+            </div>  
         </div>
-        <div class="skill-wrap">
-            <div class="skill-icon"><i class="far fa-file-code"></i></div>
-            <div class="skill-title"><h2>Skills</h2></div>
-            <div class="skill-message">
-                <p>My skills are HTML5, CSS3, JavaScript ES6 and GitHub.</p>
-            </div>
+    </main>
+    <footer>
+        <div class="footer-ver">alpha v1</div>
+        <div class="footer-links">
+            <a href="htps://twitter.com/JordanDevelops" target="_blank"><i class="fab fa-twitter"></i></a>
+            <a href="htps://github.com/JordanDevelops" target="_blank"><i class="fab fa-github"></i></a>
+            <a href="mailto:email.jordanschulte@gmail.com"><i class="fas fa-envelope"></i></a>
         </div>
-    </div>
-</div>
-<div class="projects-wrapper" id="projects">
-    <h1 class="projects-title">Projects</h1>
-<div class="projects-container">
-    <div class="projects-div">
-        <div class="projects-tag">
-            <div class="webTag">Website</div>
-        </div>
-        <a href="https://github.com/JordanDevelops/JordanDevelops.github.io" class="btn-view" target="_blank">
-        <div class="projects-img"><img src="Images/portfolio.png" alt="My Portfolio" draggable="false"></div>
-        <div class="projects-text">
-            <h2>My Portfolio</h2>
-            <div class="projects-text-section" data-simplebar>
-                <p>I built this website to showcase all my projects I have worked on / built. This website was built with <span>HTML</span>, <span>CSS</span> and <span>JavaScript</span>.</p>
-            </div>
-        </div>
-    </a>
-    </div>
-    <div class="projects-div">
-        <div class="projects-tag">
-            <div class="gameTag">Game</div>
-        </div>
-        <a href="https://number-guesser-jordan.netlify.app/" class="btn-view" target="_blank">
-        <div class="projects-img"><img src="Images/ngg.png" alt="Jordan's Number Guesser Game." draggable="false"></div>
-        <div class="projects-text">
-            <h2>Number Guesser</h2>
-            <div class="projects-text-section" data-simplebar>
-                <p>This was a game I had done for boces, but I decided to upgrade it. <span>HTML</span>, <span>CSS</span> and <span>JavaScript</span>.</p>
-            </div>
-        </div>
-        </a>
-    </div>
-    <div class="projects-div">
-        <div class="projects-tag">
-            <div class="appTag">App</div>
-        </div>
-        <a href="https://wwwnotes.netlify.app" class="btn-view" target="_blank">
-        <div class="projects-img"><img src="Images/wwwNotes.png" alt="Jordan's Note's App." draggable="false"></div>
-        <div class="projects-text">
-            <h2>Notes App</h2>
-            <div class="projects-text-section" data-simplebar>
-                <p>I made this project because I needed to store information for games and homework. <span>HTML</span>, <span>CSS</span> and <span>JavaScript</span>.</p>
-            </div>
-        </div>
-        </a>
-    </div>
-    <div class="projects-div">
-        <div class="projects-tag">
-            <div class="appTag">App</div>
-        </div>
-        <a href="https://jordan-todo-list.netlify.app/" class="btn-view" target="_blank">
-        <div class="projects-img"><img src="Images/jdl.png" alt="Jordan's To-do List" draggable="false"></div>
-        <div class="projects-text">
-            <h2>To-do List</h2>
-            <div class="projects-text-section" data-simplebar>
-                <p>I made this website for my grocery shopping and to sharpen my JavaScript skills. <span>HTML</span>, <span>CSS</span> and <span>JavaScript</span>.</p>
-            </div>
-        </div>
-        </a>
-    </div>
-    <div class="projects-div">
-        <div class="projects-tag">
-            <div class="appTag">App</div>
-        </div>
-        <a href="https://weather-app-jordan.netlify.app/" class="btn-view" target="_blank">
-        <div class="projects-img"><img src="Images/weather.png" alt="Weather App" draggable="false"></div>
-        <div class="projects-text">
-            <h2>Weather App</h2>
-            <div class="projects-text-section" data-simplebar>
-                <p>Made this website to practice my pulling information from API's. This uses the OpenWeather API. <span>HTML</span>, <span>CSS</span> and <span>JavaScript</span>.</p>
-            </div>
-        </div>
-        </a>
-    </div>
-    <div class="projects-div">
-        <div class="projects-tag">
-            <div class="gameTag">Game</div>
-        </div>
-        <a href="https://rock-paper-scissors-jordan.netlify.app/" class="btn-view" target="_blank">
-        <div class="projects-img"><img src="Images/rps.png" alt="Rock, Paper, Scissors" draggable="false"></div>
-        <div class="projects-text">
-            <h2>Rock, Paper, Scissors</h2>
-            <div class="projects-text-section" data-simplebar>
-            <p>Rock, Paper, Scissors made this game with vanilla JavaScript to tone my skills. <span>HTML</span>, <span>CSS</span> and <span>JavaScript</span>.</p>
-        </div>
-        </div>
-        </a>
-    </div>
-    <div class="projects-div">
-        <div class="projects-tag">
-            <div class="appTag">App</div>
-        </div>
-        <a href="https://tip-calculator-jordan.netlify.app/" class="btn-view" target="_blank">
-        <div class="projects-img"><img src="Images/tip.png" alt="Tip Calculator" draggable="false"></div>
-        <div class="projects-text">
-            <h2>Tip Calculator</h2>
-            <div class="projects-text-section" data-simplebar>
-                <p>Made this website to help me out at the dinner table. <span>HTML</span>, <span>CSS</span> and <span>JavaScript</span>.</p>
-            </div>
-        </div>
-        </a>
-    </div>
-    <div class="projects-div">
-        <div class="projects-tag">
-            <div class="appTag">App</div>
-        </div>
-        <a href="https://jordan-birthday-countdown.netlify.app/" class="btn-view" target="_blank">
-        <div class="projects-img"><img src="Images/countdown.png" alt="Countdown Timer" draggable="false"></div>
-        <div class="projects-text">
-            <h2>Countdown Timer</h2>
-            <div class="projects-text-section" data-simplebar>
-                <p>Made this to practice my JavaScript skills and to test out the Date objects. <span>HTML</span>, <span>CSS</span> and <span>JavaScript</span>.</p>
-            </div>
-        </div>
-        </a>
-    </div>
-    <div class="projects-div">
-        <div class="projects-tag">
-            <div class="webTag">Website</div>
-        </div>
-        <a href="https://radio2bz.com" class="btn-view" target="_blank">
-        <div class="projects-img"><img src="Images/radio2bz.png" alt="Radio2BZ" draggable="false"></div>
-        <div class="projects-text">
-            <h2>Radio2BZ</h2>
-            <div class="projects-text-section" data-simplebar> 
-                <p>I made this website for my grandfather. He started selling his items on ebay so I thought it would be a good idea to make him a website. Our website has gained much traction and it did pretty well, I am still constantly updating it everyday. <span>HTML</span>, <span>CSS</span> and <span>JavaScript</span>.</p>
-            </div>
-        </div>
-        </a>
-    </div>
-    <div class="projects-div">
-        <div class="projects-tag">
-            <div class="webTag">Website</div>
-        </div>
-        <a href="https://competentcreators.netlify.app/" class="btn-view" target="_blank">
-        <div class="projects-img"><img src="Images/cc.png" alt="Competent Creators" draggable="false"></div>
-        <div class="projects-text">
-            <h2>Competent Creators</h2>
-            <div class="projects-text-section" data-simplebar>
-                <p>I built this website for a friend who made pretty cool gfx so I made him a website. This website was built with <span>HTML</span>, <span>CSS</span> and <span>JavaScript</span>.</p>
-            </div>
-        </div>
-    </a>
-    </div>
-    <div class="projects-div">
-        <div class="projects-tag">
-            <div class="webTag">Website</div>
-        </div>
-        <a href="https://mcmacros.netlify.app/" class="btn-view" target="_blank">
-        <div class="projects-img"><img src="Images/macros.png" alt="MC Macros" draggable="false"></div>
-        <div class="projects-text">
-            <h2>MC Macros</h2>
-            <div class="projects-text-section" data-simplebar>
-                <p>I made this website to release my C++ programs I built. I was testing the waters with C++ and made a couple programs. This website was built with <span>HTML</span>, <span>CSS</span> and <span>JavaScript</span>.</p>
-            </div>
-        </div>
-    </a>
-    </div>
-    <div class="projects-div">
-        <div class="projects-tag">
-            <div class="webTag">Website</div>
-        </div>
-        <a href="https://inappfree.netlify.app/" class="btn-view" target="_blank">
-        <div class="projects-img"><img src="Images/iap.png" alt="In-App Free" draggable="false"></div>
-        <div class="projects-text">
-            <h2>In-App Free</h2>
-            <div class="projects-text-section" data-simplebar>
-                <p>This website was my first real project, I was happy when I finished this because I thought it looked cool and was fully functional. <span>HTML</span>, <span>CSS</span> and <span>Bootstrap</span>.</p>
-            </div>
-        </div>
-    </a>
-    </div>
-</div>
-</div>
-<a href="#top" class="btt" title="Back To Top" data-tooltip="Back to Top"><i class="fas fa-angle-up"></i></a>
-<div class="notification-light">
-    <p>Theme has been set to <span class="accent-color">Light</span> mode.</p>
-</div>
-<div class="notification-dark">
-    <p>Theme has been set to <span class="accent-color">Dark</span> mode.</p>
-</div>
-<div class="foot-wrapper" id="socials">
-    <h1>Thanks for visiting</h1>
-        <div class="media-a">
-            <a href="https://www.youtube.com/channel/UClsk6xnSAOGTWeZ3zhNu2uQ" target="_blank" data-tooltip="YouTube"><i class="fab fa-youtube"></i></a>
-            <a href="https://twitter.com/JordanDevelops" target="_blank" data-tooltip="Twitter"><i class="fab fa-twitter"></i></a>
-            <a href="https://github.com/JordanDevelops" target="_blank" data-tooltip="GitHub"><i class="fab fa-github"></i></a>
-            <a href="https://www.snapchat.com/add/phoaxy" target="_blank" data-tooltip="Snapchat"><i class="fab fa-snapchat-ghost"></i></a>
-            <a href="mailto:email.jordanschulte@gmail.com" target="_blank" data-tooltip="Email Me"><i class="fas fa-envelope"></i></a>
-        </div>
-    <p class="copyright">Copyright © 2021, Jordan.</p>
-    <p class="version"><a href="https://github.com/JordanDevelops/JordanDevelops.github.io/commits/main" target="_blank">version 2.5.2</a></p>
-</div>
-</div>
-    <script src="JavaScript/navbar.js"></script>
-    <script src="JavaScript/totop.js"></script>
-    <script src="JavaScript/lightmode.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/simplebar@latest/dist/simplebar.min.js"></script>
+        <div class="footer-ver">© 2021, Jordan</div>
+    </footer>
+    <!--JavaScript-->
+    <script src="src/JavaScript/navbar.js"></script>
+    <script src="src/JavaScript/app.js"></script>
+    <!--JavaScript-->
 </body>
 </html>
