--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <!--FONTS-->
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Tinos&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;700&display=swap" rel="stylesheet">
     <!--FONTS-->
     <!--Font Awesome-->
     <script src="https://kit.fontawesome.com/eded3175eb.js" crossorigin="anonymous"></script>
@@ -95,7 +96,7 @@
         </div>
     </main>
     <footer>
-        <div class="footer-ver">alpha v1</div>
+        <div class="footer-ver">alpha v1.1</div>
         <div class="footer-links">
             <a href="htps://twitter.com/JordanDevelops" target="_blank"><i class="fab fa-twitter"></i></a>
             <a href="htps://github.com/JordanDevelops" target="_blank"><i class="fab fa-github"></i></a>
