--- a/about.html
+++ b/about.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
     <title>Jordan | About Me</title>
+    <link rel="icon" href="Images/bear.jpg">
     <!--Style Sheet-->
     <link rel="stylesheet" href="src/SCSS/about.css">
     <link rel="stylesheet" href="src/SCSS/navbar.css">
@@ -40,10 +41,10 @@
         </div>
     </main>
     <footer>
-        <div class="footer-ver">alpha v1.1</div>
+        <div class="footer-ver">alpha v1.2</div>
         <div class="footer-links">
-            <a href="htps://twitter.com/JordanDevelops" target="_blank"><i class="fab fa-twitter"></i></a>
-            <a href="htps://github.com/JordanDevelops" target="_blank"><i class="fab fa-github"></i></a>
+            <a href="htps://twitter.com/Jschlte" target="_blank"><i class="fab fa-twitter"></i></a>
+            <a href="htps://github.com/Jschlte" target="_blank"><i class="fab fa-github"></i></a>
             <a href="mailto:email.jordanschulte@gmail.com"><i class="fas fa-envelope"></i></a>
         </div>
         <div class="footer-ver">© 2021, Jordan</div>
