--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
         <div id="noscript-warning">*This website does not function correctly without JavaScript, please enable JavaScript in your settings!*</div>
     </noscript>
     <h1 class="head-title">Hello, my name is <span>Jordan Schulte</span>!</h1>
-    <p class="head-paragraph" id="skills">I am aspiring to become a Front-end web developer. View my projects below or check me out on social media!</p>
+    <p class="head-paragraph">I am aspiring to become a Front-end web developer. View my projects below or check me out on social media!</p>
     <a href="#projects" class="head-button">Projects</a>
 </div>
-<div class="skills-wrapper">
+<div class="skills-wrapper" id="skills">
     <div class="skills-title">
         <h1>My Skills</h1>
     </div>
