--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <div class="nav-links">
                     <a href="#skills" class="nav-item">Skills</a>
                     <a href="#projects" class="nav-item">Projects</a>
-                    <a href="images/Jordan's_Resume.pdf" download class="nav-item" title="Download my Résumé (pdf)">Résumé</a>
+                    <a href="dl_content/Jordans_Resume.pdf" download class="nav-item" title="Download my Résumé (pdf)">Résumé</a>
                     <div class="navContent">
                         <a href="#socials" class="dropbtn nav-item">Social Media <i class="fas fa-chevron-down"></i></a>
                         <div class="dropdown-content">
